tests/01_fib_struct.output
01_fib_struct.cx:7:2: error: expected identifier, got KW_STRUCT
