tests/01_fib_struct.cx
int main() {
    Fib fib = {12};
    printf("fib: {}\n", fib.calculate());
    return 0;
}

struct Fib {
    int n;

    void new(int n) {
        this.n = n;
    }

    int calculate() {
        return this.fib(this.n);
    }

    int fib(int n) {
        if (n < 2) {
            return n;
        }
        return this.fib(n - 2) + this.fib(n - 1);
    }
};